# x12-delimiters

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: audit.yml  ci.yml  release.yml
benches/: delimiter_benchmarks.rs
src/: errors.rs  lib.rs
