[package]
name = "x12-delimiters"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Low-level handling of X12 EDI delimiters."
license = "MIT OR Apache-2.0"
repository = "https://github.com/copyleftdev/x12-delimiters"
readme = "README.md"
keywords = ["x12", "edi", "parser", "delimiters", "ansi"]
categories = ["parsing", "text-processing"]


[dependencies]

[dev-dependencies]
proptest = "1.3.1"
criterion = "0.5.1"

[[bench]]
name = "delimiter_benchmarks"
harness = false